infrastructure/quarkus/quarkus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-service
  namespace: lmagniez03-dev
spec:
  selector:
    app: quarkus-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
